--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: Armando Barsante
 author: Armando Barsante
 email: armando_barsante@msn.com
 description: >-
-  Marine ecologist & spatial analyst working with sea turtles and conservation.
+  Biologist focused in conservation of wild ecology systems.
 
 theme: minima
