--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Armando Barsante
+title: Armando José Barsante Santos
 author: Armando Barsante
 email: armando_barsante@msn.com
 description: >-
