--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Armando José Barsante Santos
-author: Armando Barsante
+author: Armando J. B. Santos
 email: armando_barsante@msn.com
 description: >-
   Biologist focused in conservation of wild ecology systems.
