--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: Armando José Barsante Santos
 author: Armando J. B. Santos
 email: armando_barsante@msn.com
 description: >-
-  Biologist focused in conservation of wild ecology systems.
+Biologist focused on the conservation of wildlife and ecological systems.
 
 theme: minima
