--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Armando José Barsante Santos
+title: Armando José Barsante Santos, PhD
 author: Armando J. B. Santos
 email: armando_barsante@msn.com
 description: >-
