--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
-title: Armando José Barsante Santos, PhD
-author: Armando J. B. Santos
+title: Armando José Barsante Santos
 email: armando_barsante@msn.com
-description: >-
+description: >
   Biologist focused on the conservation of wildlife and ecological systems.
 theme: minima
 
-# NEW: navigation links (menu)
-minima:
-  navigation:
-    - title: "Welcome"
-      url: "/"
-    - title:
+# Custom navigation
+header_pages:
+  - index.md
+  - cv.md
+  - index-pt.md
+  - cv-pt.md
