--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Armando José Barsante Santos, PhD
 email: armando_barsante@msn.com
 description: >
-  Biologist focused on the conservation of biodiversity and ecological processes.
+  Biologist interested on the conservation of biodiversity and ecological processes.
 theme: minima
 
 # Custom navigation
