--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,5 @@ header_pages:
   - cv.md
  # - index-pt.md #
 #  - cv-pt.md #
+- title: Google Scholar
+    url: https://scholar.google.com/citations?user=vt0Yn70AAAAJ
