--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,4 @@ theme: minima
 header_pages:
   - index.md
   - cv.md
- # - index-pt.md #
-#  - cv-pt.md #
-- title: Google Scholar
-    url: https://scholar.google.com/citations?user=vt0Yn70AAAAJ
+  - scholar.md
